--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Secret",
-	"short_name": "Secret",
+	"name": "CASO 23",
+	"short_name": "CASO 23",
 	"description": "",
 	"start_url": "index.html",
 	"display": "fullscreen",
